--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,10 @@
   "deno.enable": true,
   "deno.lint": true,
   "deno.unstable": true,
+  "deno.config": "./tsconfig.json",
   "[typescript]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
   },
-  "terminal.integrated.defaultProfile.linux": "zsh"
+  "terminal.integrated.defaultProfile.linux": "zsh",
+  "editor.formatOnSave": true
 }
