--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@astrojs/netlify": "^1.3.0",
     "@astrojs/tailwind": "^2.1.3",
-    "@astrojs/vercel": "^2.4.0",
     "@supabase/supabase-js": "^2.2.3",
     "astro": "^1.9.1",
     "tailwindcss": "^3.0.24"
