--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/netlify": "^1.3.0",
     "@astrojs/tailwind": "^2.1.3",
+    "@progfay/scrapbox-parser": "^8.1.0",
     "@supabase/supabase-js": "^2.2.3",
     "astro": "^1.9.1",
     "tailwindcss": "^3.0.24"
