--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": "true",
-  "name": "sbx",
+  "name": "w",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -9,13 +9,17 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@astrojs/netlify": "^1.3.0",
-    "@astrojs/solid-js": "^1.2.3",
-    "@astrojs/tailwind": "^2.1.3",
+    "@astrojs/netlify": "^2.0.0",
+    "@astrojs/solid-js": "^2.0.0",
+    "@astrojs/tailwind": "^3.0.0",
     "@progfay/scrapbox-parser": "^8.1.0",
-    "@supabase/supabase-js": "^2.2.3",
-    "astro": "^1.9.1",
+    "@supabase/supabase-js": "^2.4.1",
+    "astro": "^2.0.1",
     "solid-js": "^1.6.9",
     "tailwindcss": "^3.0.24"
+  },
+  "packageManager": "pnpm@7.25.0",
+  "volta": {
+    "node": "18.11.0"
   }
 }
