--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@progfay/scrapbox-parser": "^8.1.0",
     "@supabase/supabase-js": "^2.10.0",
     "astro": "^2.1.2",
+    "ramda": "^0.29.0",
     "solid-js": "^1.6.12",
     "tailwindcss": "^3.2.7"
   },
-  "packageManager": "pnpm@7.25.0",
+  "packageManager": "pnpm@8.5.0",
   "volta": {
     "node": "18.11.0"
+  },
+  "devDependencies": {
+    "@types/ramda": "^0.29.3"
   }
 }
