--- a/package.json
+++ b/package.json
@@ -19,8 +19,5 @@
     "solid-js": "^1.8.4",
     "tailwindcss": "^3.3.5"
   },
-  "packageManager": "pnpm@8.10.0",
-  "volta": {
-    "node": "20.9.0"
-  }
+  "packageManager": "pnpm@8.10.0"
 }
