--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "solid-js": "^1.8.11",
     "tailwindcss": "^3.4.1"
   },
-  "packageManager": "pnpm@8.10.0"
+  "packageManager": "pnpm@8.10.0",
+  "devDependencies": {
+    "prettier": "^3.2.2",
+    "prettier-plugin-astro": "^0.12.3"
+  }
 }
